@@ -107,7 +107,7 @@ public class TreeWalkerTest extends AbstractModuleTestSupport {
      * This test is needed for 100% coverage.
      * The Pitest reports some conditions as redundant, for example:
      * <pre>
-     *     if (!collection.isEmpty()) { // This may me omitted.
+     *     if (!collection.isEmpty()) { // This may be omitted.
      *         Object value = doSomeHardJob();
      *         for (Item item : collection) {
      *             item.accept(value);
@@ -603,9 +603,8 @@ public class TreeWalkerTest extends AbstractModuleTestSupport {
         verify(checkerConfig, filePath, expected);
 
         assertWithMessage("External resource is not present in cache")
-                .that(new String(Files.readAllBytes(cacheFile.toPath()), StandardCharsets.UTF_8)
-                        .contains("InputTreeWalkerSuppressionXpathFilter.xml"))
-                .isTrue();
+                .that(Files.readString(cacheFile.toPath()))
+                .contains("InputTreeWalkerSuppressionXpathFilter.xml");
     }
 
     @Test
